--- a/views/login-signup/login.ejs
+++ b/views/login-signup/login.ejs
@@ -260,7 +260,9 @@
           <span class="loading-spinner"></span>
           LOGIN
         </button>
-        
+        <div class="forgot-password-link">
+          <a href="/api/auth/forgot-password">Forgot Password?</a>
+        </div>
         <div class="oauth-providers">
           <p class="divider">Or continue with</p>
           <button class="oauth-btn google" onclick="window.location.href='/api/auth/google'">
