Forgot, reset and otp UI added

--- a/views/auction-details.ejs
+++ b/views/auction-details.ejs
@@ -62,6 +62,34 @@
       text-align: left;
     }
 
+    .otp-input-group{
+      display: inline-flex;
+      align-items: center;
+      justify-content: space-around;
+      gap: 5%;
+      margin: 20px auto;
+    }
+
+    .otp-input-group input {
+      width: 300px; 
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 14px;
+      margin: 0 auto 10px;
+    }
+
+    .verify-otp-btn {
+      background: #085a17;
+      color: #fff;
+      padding: 12px;
+      border: none;
+      border-radius: 5px;
+      transition: 0.3s ease;
+      width: 200px;
+    }
+
   </style>
 
 </head>
