--- a/views/subscriptionSwapping/auction.ejs
+++ b/views/subscriptionSwapping/auction.ejs
@@ -251,7 +251,7 @@
     <section>
       <h1>Auction</h1>
       <h2>Welcome, <%= user.fullName %>!</h2></br></br>
-      <div><b>Product:</b> <%= product.title %></div>
+      <div><b>Product:</b> <%= product.platform_name%></div>
       <p><b>Seller:</b> <%= product.seller ? product.seller.fullName : "Unknown Seller" %></p>
       <p>Start: <span id="start-date"><%= product.startDate %></span></p>
       <p>End: <span id="end-date"><%= product.endDate %></span></p>
