--- a/views/common/navigation.ejs
+++ b/views/common/navigation.ejs
@@ -19,7 +19,7 @@
             <a href="/rental">Renting Items</a>
         </li>
         <li class="<%= typeof activePage !== 'undefined' && activePage === 'subscription' ? 'active' : '' %>">
-            <a href="/subscription">Subscription Swapping</a>
+            <a href="/subscription">Subscriptions</a>
         </li>
         <li class="<%= typeof activePage !== 'undefined' && activePage === 'secondHand' ? 'active' : '' %>">
             <a href="/secondHand" >Second-Hand Buying</a>
