--- a/views/subscriptionSwapping/subscriptionHome.ejs
+++ b/views/subscriptionSwapping/subscriptionHome.ejs
@@ -21,7 +21,7 @@
 
 
     <div class="renting-container">
-        <h1>Subscription Swapping</h1>
+        <h1>Subscriptions</h1>
         <p>Choose an option to proceed</p>
 
         <div class="options">
